# DotnetRng

./: .gitignore  Cargo.toml  LICENSE  README.md  clippy.toml
src/: lib.rs  tests.rs
testgen/: Program.cs
tests/: generated.rs  manual.rs
